--- a/CFMMCD/Views/Account/EditAccess.cshtml
+++ b/CFMMCD/Views/Account/EditAccess.cshtml
@@ -154,6 +154,12 @@
                         Location Maintenance Page
                     </label>
                 </div>
+                <div class="checkbox">
+                    <label>
+                        @Html.CheckBoxFor(m => Model.GRPInput)
+                        Groups Maintenance Page
+                    </label>
+                </div>
             </div>
         </div>
 
