--- a/CFMMCD/Views/Account/Login.cshtml
+++ b/CFMMCD/Views/Account/Login.cshtml
@@ -20,9 +20,8 @@
         <div class="form-group">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group">
-
-            <input type="submit" class="btn btn-default btn-block">
+        <div class="form-group right">
+            <input type="submit" class="btn btn-default">
         </div>
     }
 </div>
