--- a/CFMMCD/Views/VendorMaster/Index.cshtml
+++ b/CFMMCD/Views/VendorMaster/Index.cshtml
@@ -220,7 +220,7 @@
 </div>
 <script>
  @{
-        string region = "NCR";
+        string region = "";
         string province = "";
         string city = "";
         if (@Model.Region != null)
