--- a/CFMMCD/Content/Site.css
+++ b/CFMMCD/Content/Site.css
@@ -12,8 +12,10 @@ label {
   float: right;
 }
 .navbar {
-  background-color: rgb(235, 90, 60);
+  background-color: rgba(10, 10, 10, 0.8);
   border-radius: 0 !important;
+  height:60px;
+  padding-top:5px;
   -webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
   box-shadow:  2px 2px 1px rgba(0, 0, 0, 0.2);
@@ -22,27 +24,60 @@ label {
   padding-top: 10px;
 }
 .navbar-header a img {
-  width: 32px;
+  width: 28px;
   position: relative;
 }
-.navbar-nav a {
-  color: white;
+.header-text {
+    color:white;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    font-size:20px;
+    font-weight:300;
 }
 .navbar-nav li a {
-  -webkit-transition-duration: 0.4s;
-  -moz-transition-duration: 0.4s;
-  transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    transition-duration: 0.4s;
 }
 .navbar-nav li a:focus {
     background-color:inherit;
+    color: white;
 }
 .nav .open>a {
   background-color: rgb(235, 60, 30) !important;
   color: white !important;
 }
-.navbar-nav li a:hover {
-  background-color: rgb(235, 60, 30);
+.navbar-nav li a:hover,.navbar-brand:hover {
+  background-color: rgba(30, 30, 30, 0.7);
   color: white !important;
+}
+.navbar-a {
+    border-radius: 15px;
+    color: white;
+    font-variant:small-caps;
+    height:30px;
+    margin-top:10px;
+    padding-top:5px !important;
+    position:relative;
+    text-anchor:middle;
+}
+.navbar-brand {
+    border-radius: 30px;
+    -webkit-transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+.dropdown-menu {
+    background-color:rgba(20, 20, 20, 0.8);
+    top:55px;
+}
+.dropdown-item {
+    color:white !important;
+    position:relative;
+}
+.dropdown-hr {
+    margin:0;
+    opacity:0.2;
+    color:darkgray !important;
 }
 .header {
   text-align: center;
@@ -106,11 +141,10 @@ label {
 }
 .btn-default {
   background-color: rgb(235, 90, 60);
+  border-radius:25px;
   color: white !important;
-  margin-top: 8px;
-  -webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
-  box-shadow:  2px 2px 1px rgba(0, 0, 0, 0.2);
+  font-variant:small-caps;
+  height:40px;
 }
 .btn-default:hover {
   background-color: rgb(237, 140, 80);
@@ -125,6 +159,19 @@ label {
 }
 .btn-default:active {
   background-color: rgb(255, 217, 102);
+}
+.btn-secondary {
+  background-color: rgb(80, 80, 80);
+  border-radius:25px;
+  color: white !important;
+  font-variant:small-caps;
+}
+.btn-secondary:hover, .btn-secondary:focus {
+  background-color: rgb(100, 100, 100);
+  color: white;
+  -webkit-transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  transition-duration: 0.4s;
 }
 .center-sm {
     max-width: 400px;
@@ -142,12 +189,17 @@ footer {
     position: fixed;
 }
 .modal {
-    margin: auto;
+    margin-left: auto;
+    margin-right:auto;
     max-width: 550px;
     padding-top:5%;
     overflow: hidden;
     vertical-align: middle;
 }
+.modal-content  {
+    max-height:inherit;
+    position:relative;  
+ }
 .modal-body {
     max-height: 350px;
     overflow-y: scroll;
@@ -245,6 +297,12 @@ li {
 .tr-element:hover {
     cursor:pointer;
 }
+.nav-pills>li>a {
+    color:black;
+}
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+    background-color:rgb(235, 90, 60);
+}
 
 @media (min-width: 1200px) {
   .label-container-left {
@@ -262,3 +320,4 @@ li {
       position:relative;
   }
 }
+@media (max-height)
