--- a/CFMMCD/Views/Account/CreateAccount.cshtml
+++ b/CFMMCD/Views/Account/CreateAccount.cshtml
@@ -147,6 +147,12 @@
                         Location Maintenance Page
                     </label>
                 </div>
+                <div class="checkbox">
+                    <label>
+                        @Html.CheckBoxFor(m => Model.GRPInput)
+                        Groups Maintenance Page
+                    </label>
+                </div>
             </div>
         </div>
         <div class="form-group">
