--- a/CFMMCD/Views/Home/Index.cshtml
+++ b/CFMMCD/Views/Home/Index.cshtml
@@ -144,7 +144,7 @@
                             for (int i = 0; i < Model.MenuItemNotif.Count(); i++)
                             {
                                 <tr>
-                                    <td>@Model.MenuItemNotif[i].RIRMIC</td>
+                                    <td>@Model.MenuItemNotif[i].MIMMIC</td>
                                     <td>@Model.MenuItemNotif[i].MIMDSC</td>
                                 </tr>
                             }
