--- a/CFMMCD/Views/StoreProfile/Index.cshtml
+++ b/CFMMCD/Views/StoreProfile/Index.cshtml
@@ -147,6 +147,11 @@
                         @Html.LabelFor(model => Model.CITY, "City", new { @class = "form-label col-md-3" })
                         @Html.DropDownListFor(m => Model.CITY, new SelectList(new List<Object>()), new { @class = "form-control input-sm", @Id = "city", @Value = Model.CITY })
                     </div>
+                    <hr />
+                    <div class="form-group">
+                        <label class="form-label">Group list</label>
+                        @Html.DropDownListFor(m => Model.Group, new SelectList(Model.GroupList, "value", "text", Model.Group), new { @class = "form-control input-sm" })
+                    </div>
                 </div>
             </div>
         </div>
@@ -214,7 +219,10 @@
 
         <div class="form-inline bottom float" style="right:50px">
             <input type="submit" name="command" value="Save" class="btn btn-default" />
-            <input type="submit" name="command" value="Delete" class="btn btn-default" />
+            @if (Model.STORE_NO != null && !Model.STORE_NO.Equals(""))
+            {
+                <input type="submit" name="command" value="Delete" class="btn btn-default" />
+            }
         </div>
     }
 </div>
@@ -256,7 +264,7 @@
 <script>
     // Region, Province, and City Dropdown Handling
     @{
-        string region = "NCR";
+        string region = "";
         string province = "";
         string city = "";
         if (@Model.REGION != null)
